find all wallets
