# pelucioclient/api_wallet.go
@@ -108,6 +108,20 @@ type WalletAPI interface {
 	V1AdminWalletPostExecute(r WalletAPIV1AdminWalletPostRequest) (*WalletWalletResponse, *http.Response, error)
 
 	/*
+	V1AdminWalletsGet Get Wallets
+
+	Get wallets
+
+	@param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+	@return WalletAPIV1AdminWalletsGetRequest
+	*/
+	V1AdminWalletsGet(ctx context.Context) WalletAPIV1AdminWalletsGetRequest
+
+	// V1AdminWalletsGetExecute executes the request
+	//  @return []WalletWalletResponse
+	V1AdminWalletsGetExecute(r WalletAPIV1AdminWalletsGetRequest) ([]WalletWalletResponse, *http.Response, error)
+
+	/*
 	V1OpenWalletExternalIdGet Get Wallet by externalID
 
 	Get wallet infos by ExternalID
@@ -763,6 +777,105 @@ func (a *WalletAPIService) V1AdminWalletPostExecute(r WalletAPIV1AdminWalletPost
 	}
 	// body params
 	localVarPostBody = r.model
+	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
+	if err != nil {
+		return localVarReturnValue, nil, err
+	}
+
+	localVarHTTPResponse, err := a.client.callAPI(req)
+	if err != nil || localVarHTTPResponse == nil {
+		return localVarReturnValue, localVarHTTPResponse, err
+	}
+
+	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
+	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
+	if err != nil {
+		return localVarReturnValue, localVarHTTPResponse, err
+	}
+
+	if localVarHTTPResponse.StatusCode >= 300 {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: localVarHTTPResponse.Status,
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	err = a.client.decode(&localVarReturnValue, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+	if err != nil {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: err.Error(),
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHTTPResponse, nil
+}
+
+type WalletAPIV1AdminWalletsGetRequest struct {
+	ctx context.Context
+	ApiService WalletAPI
+}
+
+func (r WalletAPIV1AdminWalletsGetRequest) Execute() ([]WalletWalletResponse, *http.Response, error) {
+	return r.ApiService.V1AdminWalletsGetExecute(r)
+}
+
+/*
+V1AdminWalletsGet Get Wallets
+
+Get wallets
+
+ @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+ @return WalletAPIV1AdminWalletsGetRequest
+*/
+func (a *WalletAPIService) V1AdminWalletsGet(ctx context.Context) WalletAPIV1AdminWalletsGetRequest {
+	return WalletAPIV1AdminWalletsGetRequest{
+		ApiService: a,
+		ctx: ctx,
+	}
+}
+
+// Execute executes the request
+//  @return []WalletWalletResponse
+func (a *WalletAPIService) V1AdminWalletsGetExecute(r WalletAPIV1AdminWalletsGetRequest) ([]WalletWalletResponse, *http.Response, error) {
+	var (
+		localVarHTTPMethod   = http.MethodGet
+		localVarPostBody     interface{}
+		formFiles            []formFile
+		localVarReturnValue  []WalletWalletResponse
+	)
+
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "WalletAPIService.V1AdminWalletsGet")
+	if err != nil {
+		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
+	}
+
+	localVarPath := localBasePath + "/v1/admin/wallets"
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+
+	// to determine the Content-Type header
+	localVarHTTPContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHTTPContentType := selectHeaderContentType(localVarHTTPContentTypes)
+	if localVarHTTPContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHTTPContentType
+	}
+
+	// to determine the Accept header
+	localVarHTTPHeaderAccepts := []string{"application/json"}
+
+	// set Accept header
+	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
+	if localVarHTTPHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
+	}
 	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
 	if err != nil {
 		return localVarReturnValue, nil, err
